# bizdemo/mall/business/mall_api/handlers/brand_del.go
@@ -1,0 +1,48 @@
+package handlers
+
+import (
+	jwt "github.com/appleboy/gin-jwt/v2"
+	"github.com/cloudwego/kitex-examples/bizdemo/mall/business/mall_api/dal/client"
+	"github.com/cloudwego/kitex-examples/bizdemo/mall/business/mall_api/kitex_gen/cmp/ecom/product"
+	"github.com/cloudwego/kitex-examples/bizdemo/mall/business/mall_api/kitex_gen/cmp/ecom/shop"
+	"github.com/cloudwego/kitex-examples/bizdemo/mall/pkg/conf"
+	"github.com/cloudwego/kitex-examples/bizdemo/mall/pkg/errno"
+	"github.com/gin-gonic/gin"
+)
+
+// BrandDel godoc
+// @Summary 商家删除品牌
+// @Description 商家删除品牌
+// @Tags 商品模块-品牌子模块
+// @Accept json
+// @Produce json
+// @Param shopSettleParam body handlers.BrandDelParam true "品牌信息"
+// @Param Authorization header string true "Bearer $token"
+// @Success 200 {object} handlers.Response
+// @Router /product/brand_del [post]
+func BrandDel(c *gin.Context) {
+	var brandDelParam BrandDelParam
+	if err := c.ShouldBind(&brandDelParam); err != nil {
+		SendResponse(c, errno.ConvertErr(err), nil)
+		return
+	}
+
+	claims := jwt.ExtractClaims(c)
+	userID := int64(claims[conf.IdentityKey].(float64))
+	shopId, err := client.GetShopIdByUserId(c, &shop.GetShopIdByUserIdReq{UserId: userID})
+	if err != nil {
+		SendResponse(c, errno.ConvertErr(err), nil)
+		return
+	}
+
+	req := &product.DeleteBrandReq{
+		BrandId: brandDelParam.BrandId,
+		ShopId:  shopId,
+	}
+	err = client.DelBrand(c, req)
+	if err != nil {
+		SendResponse(c, errno.ConvertErr(err), nil)
+		return
+	}
+	SendResponse(c, errno.Success, nil)
+}
